added header files and divided code into main and exercises

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(BaixoNivel C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(BaixoNivel
-        parametros.c)
+        Main.c Parametros.c Parametros.h Ponteiros.c Ponteiros.h)
